--- a/new3.ipynb
+++ b/new3.ipynb
@@ -9,12 +9,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "Writing pythoon_code.py\n"
      ]
     }
    ],
    "source": [
-    "%run new2.ipynb"
+    "%%writefile pythoon_code.py\n",
+    "\n",
+    "a=5 # int\n",
+    "b=6 # int\n",
+    "print (a+b) #a+b\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
