--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -315,6 +315,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5:new1.ipynb\n",
+      "6:new2.ipynb\n",
+      "7:new3.ipynb\n",
+      "8:Project1.ipynb\n",
+      "11:test0326-1.ipynb\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "j=0\n",
+    "for aa in files:\n",
+    "    i=i+1\n",
+    "    if aa.endswith ('.ipynb') :\n",
+    "        j=j+1\n",
+    "        print (str(i)+\":\"+aa)\n",
+    "print (j)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
